# BLAga

./: .buildinfo  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  genindex.html  intro.html  objects.inv  search.html  searchindex.js  setup.py
BLAga/: __init__.py
BLAga.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
_sources/: intro.md
_static/: copy-logo.js  costum.js  cursor-hearts.js  expanding-ball.js  neonpunk.css  other.js
cpp_demos/: CMakeLists.txt  benchmark.cpp  demo_benchmark.cpp  demo_matrix.cpp  demo_row_col.cpp  small_bench.cpp  tune_gemm.cpp  tune_simd.cpp  workingwithsimd.cpp
cpp_tests/: CMakeLists.txt  test_matrix.cpp
demos/: CMakeLists.txt  demo_benchmark.cpp  demo_matrix.cpp  demo_vector.cpp  dummytest.cpp  test_lapack.cpp
docs/: _config.yml  intro.md
docs/_static/: cursor-effect.js  neonpunk.css
py_demos/: benchmark.py  correct.txt  demo_benchmark_blaga.py  demo_benchmark_ngsolve.py  demo_benchmark_numpy.py  demo_matrix.py  demo_vector.py  matmult_timings.py  test.py  test_correctness.py
py_tests/: test_matrix.py  test_vector.py
src/: Silicon_amx.h  bind_bla.cpp  bind_matrix.hpp  bind_vector.hpp  clapack.h  expression.hpp  lapack_interface.h  matrix.hpp  matrix_fwd.hpp  matrixexpression.hpp  matrixexpressionspecialization.hpp  matrixexpressionspecialization.s  simd.h  simd_arm64.h  simd_avx.h  test_mk.cpp  vector.hpp  vectorexpression.hpp
src/depr/: bind_bla.cpp
src/matrix/: matrix.cpp
tests/: CMakeLists.txt  test_matrix.cpp  test_vector.cpp
